pressable container, list padding for shadow, meta for viewport

--- a/components/ListPicker/index.module.scss
+++ b/components/ListPicker/index.module.scss
@@ -1,8 +1,11 @@
 @import "../../styles/variables";
 
 .PhonePicker {
+  // For the shadow of the last child
+  padding-bottom: 4px;
+
   > * {
-    margin-bottom: $spacingSmall;
+    margin-bottom: $spacingMedium;
   }
 
   > :last-child {
