--- a/components/StyledContainer/index.module.scss
+++ b/components/StyledContainer/index.module.scss
@@ -5,4 +5,11 @@
   background-color: $btn-secondary;
   border: 3px solid black;
   box-shadow: 4px 4px 0 black;
+
+  &.pressable {
+    &.pressed {
+      box-shadow: unset;
+      transform: translate(4px, 4px);
+    }
+  }
 }
