notification front-end

--- a/styles/success/index.module.scss
+++ b/styles/success/index.module.scss
@@ -21,3 +21,11 @@
 .reminderBtn {
   width: fit-content;
 }
+
+.emailNotification {
+  display: flex;
+
+  > :first-child {
+    margin-right: $spacingMedium;
+  }
+}
