ask for location modal

--- a/styles/book-repair/index.module.scss
+++ b/styles/book-repair/index.module.scss
@@ -96,3 +96,9 @@
 .dropOffLocation {
   text-align: center;
 }
+
+.locationRequestCaption {
+  margin-bottom: $spacingMedium;
+  text-align: center;
+  width: 100%;
+}
